# mds-bridge

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: Findhidapi.cmake  mds_bridge-config.cmake.in  memfault_hid-config.cmake.in
examples/: CMakeLists.txt  continuous_comm.c  enumerate_devices.c  mds_gateway.c  mds_monitor.c  send_receive.c
examples/nodejs/: .gitignore  CMakeLists.txt  README.md  binding.gyp  binding.gyp.in  bindings.js  index.js  mds-client.js  mds-native.js  package-lock.json  package.json
examples/nodejs/src/: addon.c
examples/python/: .gitignore  README.md  bindings.py  hid_backend.py  main.py  mds_client.py  requirements.txt  test_bindings.py
include/mds_bridge/: chunks_uploader.h  mds_backend.h  mds_protocol.h  mds_protocol_internal.h  memfault_hid.h
include/memfault_hid/: mds_backend.h  mds_protocol.h  memfault_hid.h
inspiration/: mds.mdx
src/: chunks_uploader.c  mds_backend_hid.c  mds_backend_hid_internal.h  mds_protocol.c  memfault_hid_internal.h
test/: CMakeLists.txt  README.md  mock_hidapi.c  mock_libcurl.c  mock_libcurl.h  stub_hidapi.c  test_client.c  test_mds_e2e.c  test_upload.c
